--- a/gallery.html
+++ b/gallery.html
@@ -46,8 +46,11 @@
       <img id="galleryImage" style="width:100%;border-radius:16px;margin-top:12px">
     </div>
   </div>
-  
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 <script src="script.js"></script>
 </body>
 </html>
+
