--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
     <p>© Heptagon Studio</p>
     <span>Akun Instagram Pembuat Website</span>
   </footer>
-  
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 <script src="script.js"></script>
 </body>
 </html>
+
