--- a/members.html
+++ b/members.html
@@ -58,6 +58,10 @@
   </div>
 </div>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
 <script src="script.js"></script>
 </body>
 </html>
+
