--- a/news.html
+++ b/news.html
@@ -50,8 +50,11 @@
       <p id="newsContent"></p>
     </div>
   </div>
-  
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 <script src="script.js"></script>
 </body>
 </html>
+
