--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 
 <nav class="navbar">
   <span class="logo">9 Asy-Syathibi</span>
-  <div class="nav-links">
-    <a href="index.html" data-page="home">Home</a>
-    <a href="members.html" data-page="members">Anggota</a>
-    <a href="gallery.html" data-page="gallery">Galeri</a>
-    <a href="news.html" data-page="news">Berita</a>
+
+  <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+  <div class="nav-links" id="navMenu">
+    <a href="index.html">Home</a>
+    <a href="members.html">Anggota</a>
+    <a href="gallery.html">Galeri</a>
+    <a href="news.html">Berita</a>
   </div>
 </nav>
-
-
 
 <main>
   <section class="section">
@@ -52,3 +53,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
